; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_crypto.c_kull_m_crypto_bcrypt_mode_to_str.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_crypto.c_kull_m_crypto_bcrypt_mode_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BCRYPT_MODE_DESCR = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @kull_m_crypto_bcrypt_mode_to_str(i64 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  store i32* null, i32** %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i32**, i32*** @BCRYPT_MODE_DESCR, align 8
  %7 = call i64 @ARRAYSIZE(i32** %6)
  %8 = icmp ult i64 %5, %7
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load i32**, i32*** @BCRYPT_MODE_DESCR, align 8
  %11 = load i64, i64* %3, align 8
  %12 = getelementptr inbounds i32*, i32** %10, i64 %11
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %2, align 8
  br label %16

14:                                               ; preds = %1
  %15 = load i32*, i32** %4, align 8
  store i32* %15, i32** %2, align 8
  br label %16

16:                                               ; preds = %14, %9
  %17 = load i32*, i32** %2, align 8
  ret i32* %17
}

declare dso_local i64 @ARRAYSIZE(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
